--- a/essay.html
+++ b/essay.html
@@ -123,8 +123,8 @@
 								  speak to many of the questions that I have intrigued me since childhood. </br>For example,</p>
 											<ul>
 												<li>Why people have profound differences when responding to situations?</li>
-												<li>Why people tend to show different personalities?</li>
-											<li>Why people have different thoughts on certain things?</li>
+												<li>Why people tend to show opposite personalities?</li>
+											<li>Why people have distinctly different thoughts on the same things?</li>
 											<li>Why is it so hard to communicate sometimes between people?</li>
 											</ul>
 				              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
