--- a/travel.html
+++ b/travel.html
@@ -69,8 +69,12 @@
 								<p>生命从来都不曾有意义。我们来到这世界上，短暂停留几十年，便消逝在这茫茫宇宙之中。生命中，曾经经历的
 									快乐、悲伤、喜悦、低落都随着时光流逝化为残影，流于人间。你想过，你想在这短暂的旅行中，留下一些什么吗？
 								</p>
-										<p class="mb-4">Association Based Cognition</p>
-								<p>
+								<p class="mb-4">Association Based Cognition</p>
+								<p>It's very unfortunate that most of our human beings are raised up in an
+									association based society, where we develop our knowledge and understanding of things
+									happened around us. In our early life stage, association based cognition system is
+									passed down from our parents, the one who are closest to us. It then evolves over
+									time and forms the curcuits in our brain.
 								</p>
 								<p class="mb-4"></p>
 
