--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p class="lead">I was raised in Beijing, China where I spent most of my time trying to grow up
                     to be a better person. Now, I am working as a software engineer. In my spare time, I am also in love with painting,
                     cooking and discovering new worlds and cultures.</p>
-                <p class="lead">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己有机会在成长的路上踏过相隔万里的土地、领略别样的风光、感受各有千秋的中西文化。
+                <p class="lead">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己可以有机会在人生的道路上踏遍相隔万里的山河和土地、领略色彩斑斓的的人文风光、感受各有千秋的中西文化。
                     现在，作为一个标准的程序媛的我，爱生活、爱艺术，也在一直努力成为最好的自己～</p>
             </div>
 
