--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <h1 class="display-1 display-1--with-line-sep">Jing Ge</h1>
                 <h2>Welcome to my homepage! <i class="fa fa-heart" aria-hidden="true"></i></h2>
                 <p class="lead">I was raised in Beijing, China where I spent most of my time trying to grow up
-                    to be a better person. Now, I am working as a software engineer. In my spare time, I am also in love with painting,
-                    cooking and discovering new worlds and cultures.</p>
+                    to be a better person. Now, I am working as a software engineer. In my spare time, I am in love with reading, painting,
+                    cooking and swimming. </p>
                 <p class="lead">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己可以有机会在人生的道路上踏遍相隔万里的山河和土地、领略色彩斑斓的的人文风光、感受各有千秋的中西文化。
                     现在，作为一个标准的程序媛的我，爱生活、爱艺术，也在一直努力成为最好的自己～</p>
             </div>
@@ -125,7 +125,7 @@
         <div class="s-footer__bottom">
             <div class="row">
 
-                <div class="col-six">
+                 <div class="col-six">
                     <ul class="footer-social">
                         <li>
                             <a href="#0"><i class="fab fa-facebook"></i></a>
@@ -149,7 +149,6 @@
                     <div class="s-footer__copyright">
                         <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </span>
                     </div>
                 </div>
