Update chinese font

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Chinese fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng">
+
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
@@ -85,6 +88,8 @@
             <ul class="header__nav">
                 <li class="current"><a href="index.html" title="">Home</a></li>
                 <li><a href="travel.html" title="">Travel</a></li>
+                <!--<li><a href="me.html" title="">About Me</a></li>-->
+
                 <!--
                 <li><a href="single-standard.html">Blog</a></li>
                 <li><a href="cooking.html" title="">Cooking</a></li>
@@ -110,7 +115,7 @@
                 <p class="lead">I was raised in Beijing, China where I spent most of my time trying to grow up
                     to be a better person. Now, I am working as a software engineer. In my spare time, I am in love with reading, painting,
                     cooking and swimming. </p>
-                <p class="lead">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己可以有机会在人生的道路上踏遍相隔万里的山河和土地、领略色彩斑斓的的人文风光、感受各有千秋的中西文化。
+                <p class="lead-chinese">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己可以有机会在人生的道路上踏遍相隔万里的山河和土地、领略色彩斑斓的的人文风光、感受各有千秋的中西文化。
                     现在，作为一个标准的程序媛的我，爱生活、爱艺术，也在一直努力成为最好的自己～</p>
             </div>
 
