--- a/travel.html
+++ b/travel.html
@@ -71,10 +71,12 @@
            <ul class="header__nav">
                 <li><a href="index.html" title="">Home</a></li>
                 <li class="current"><a href="travel.html" title="">Travel</a></li>
+
+
                <!--
+                <li><a href="me.html" title="">About Me</a></li>
                 <li><a href="single-standard.html">Blog</a></li>
                 <li><a href="cooking.html" title="">Cooking</a></li>
-                <li><a href="page-about.html" title="">Watson</a></li>-->
             </ul> <!-- end header__nav -->
 
 
