--- a/travel.html
+++ b/travel.html
@@ -71,6 +71,7 @@
            <ul class="header__nav">
                 <li><a href="index.html" title="">Home</a></li>
                 <li class="current"><a href="travel.html" title="">Travel</a></li>
+                <li><a href="painting.html" title="">Painting</a></li>
 
 
                <!--
