--- a/painting.html
+++ b/painting.html
@@ -13,39 +13,21 @@
     ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- Chinese fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng">
-
     <!-- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <style type="text/css" media="screen">
-        .s-styles { 
-            background: #f0f0f0;
-            padding-top: 16.2rem;
-            padding-bottom: 12rem;
-        }
-
-        .s-styles .section-intro h1 {
-            margin-top: 0;
-        }
-    </style> 
-    <script> document.getElementById('seeyou').play(); </script>
-
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
-    <!-- <script src="js/pace.min.js"></script> -->
-
 
 </head>
 
 <body id="top">
 
-    <!-- preloader
+<!-- preloader
     ================================================== -->
     <div id="preloader">
         <div id="loader" class="dots-fade">
@@ -87,17 +69,15 @@
             <h2 class="header__nav-heading h6">Navigate to</h2>
 
             <ul class="header__nav">
-                <li class="current"><a href="index.html" title="">Home</a></li>
+                <li><a href="index.html" title="">Home</a></li>
                 <li><a href="travel.html" title="">Travel</a></li>
-                <li><a href="painting.html" title="">Painting</a></li>
+                <li class="current"><a href="painting.html" title="">Painting</a></li>
 
-                <!--<li><a href="me.html" title="">About Me</a></li>-->
-
-                <!--
+               <!--
                 <li><a href="single-standard.html">Blog</a></li>
-                <li><a href="cooking.html" title="">Cooking</a></li>
-                <li><a href="page-about.html" title="">Watson</a></li>-->
+                <li><a href="cooking.html" title="">Cooking</a></li> -->
             </ul> <!-- end header__nav -->
+
 
             <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
 
@@ -106,44 +86,19 @@
     </header> <!-- s-header -->
 
 
-    <!-- styles
+    <!-- s-content
     ================================================== -->
-    <section id="styles" class="s-styles">
-    
-        <div class="row narrow section-intro add-bottom text-center">
-            <div class="col-twelve tab-full">
-                <h1 class="display-1">Jing Ge</h1>
-                    <h2>Welcome to my homepage! <i class="fa fa-heart" aria-hidden="true"></i></h2>
-                <!--
-                <div class="portait-container">
-                  <div class="portait-box">
-                    <img src="images/thumbs/featured/portrait_4.jpeg">
-                  </div>
-                    <div class="portait-box">
-                    <img src="images/thumbs/featured/portrait_2.jpg">
-                  </div>
-                    <div class="portait-box">
-                    <img src="images/thumbs/featured/portrait_5.jpg">
-                  </div>
-                    <div class="portait-box">
-                    <img src="images/thumbs/featured/portrait_6.jpeg">
-                  </div>
-                </div>
-
-                <p></p>
-                -->
-
-                <p class="lead">I was raised in Beijing, China where I spent most of my time trying to grow up
-                    to be a better person. Now, I am working as a software engineer. In my spare time, I am in love with reading, painting,
-                    cooking and swimming. </p>
-                <p class="lead-chinese">作为一个生在南方、长在北京、学在中美的中国姑娘，我很庆幸自己可以有机会在人生的道路上踏遍相隔万里的山河和土地、领略色彩斑斓的的人文风光、感受各有千秋的中西文化。
-                    现在，作为一个标准的程序媛的我，爱生活、爱艺术，也在一直努力成为最好的自己～</p>
-            </div>
-
-
+    <section class="s-content s-content--top-padding s-content--narrow">
+        <div class="row">
+            <figure class="gallery__item gallery__item--3">
+                <img src="images/thumbs/painting/painting0.jpg" alt="Gallery image 1" class="gallery__img">
+            </figure>
         </div>
 
-    </section> <!-- end styles -->
+    </section> <!-- end s-content -->
+
+
+
 
     <!-- s-footer
     ================================================== -->
@@ -152,7 +107,7 @@
         <div class="s-footer__bottom">
             <div class="row">
 
-                 <div class="col-six">
+                <div class="col-six">
                     <ul class="footer-social">
                         <li>
                             <a href="#0"><i class="fab fa-facebook"></i></a>
@@ -174,8 +129,8 @@
 
                 <div class="col-six">
                     <div class="s-footer__copyright">
-                        <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        <span>This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </span>
                     </div>
                 </div>
@@ -194,6 +149,7 @@ This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a 
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/main.js"></script>
 
 </body>
