Update footer and painting

--- a/painting.html
+++ b/painting.html
@@ -90,9 +90,22 @@
     ================================================== -->
     <section class="s-content s-content--top-padding s-content--narrow">
         <div class="row">
+             <div class="portait-container">
+                  <div class="portait-box">
+                    <img src="images/thumbs/painting/painting0.jpg">
+                  </div>
+                 <div class="portait-box">
+                    <img src="images/thumbs/painting/painting0.jpg">
+                  </div>
+                 <div class="portait-box">
+                    <img src="images/thumbs/painting/painting0.jpg">
+                  </div>
+                </div>
+        <!--
             <figure class="gallery__item gallery__item--3">
                 <img src="images/thumbs/painting/painting0.jpg" alt="Gallery image 1" class="gallery__img">
             </figure>
+            -->
         </div>
 
     </section> <!-- end s-content -->
