--- a/painting.html
+++ b/painting.html
@@ -121,7 +121,7 @@
             <div class="row">
                 <div class="col-six">
                     <div class="s-footer__copyright">
-                        <span>This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        <span>This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </span>
                     </div>
