--- a/travel.html
+++ b/travel.html
@@ -156,7 +156,7 @@
                 <div class="col-six">
                     <div class="s-footer__copyright">
                         <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 </span>
                     </div>
                 </div>
