--- a/painting.html
+++ b/painting.html
@@ -48,21 +48,6 @@
             </a>
         </div> <!-- end header__logo -->
 
-        <a class="header__search-trigger" href="#0"></a>
-        <div class="header__search">
-
-            <form role="search" method="get" class="header__search-form" action="#">
-                <label>
-                    <span class="hide-content">Search for:</span>
-                    <input type="search" class="search-field" placeholder="Type Keywords" value="" name="s" title="Search for:" autocomplete="off">
-                </label>
-                <input type="submit" class="search-submit" value="Search">
-            </form>
-
-            <a href="#0" title="Close Search" class="header__overlay-close">Close</a>
-
-        </div>  <!-- end header__search -->
-
         <a class="header__toggle-menu" href="#0" title="Menu"><span>Menu</span></a>
         <nav class="header__nav-wrap">
 
@@ -121,12 +106,9 @@
             <div class="row">
                 <div class="col-six">
                     <div class="s-footer__copyright">
-                        <span>This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-</span>
+                        <span>This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
                     </div>
                 </div>
-                
             </div>
         </div> <!-- end s-footer__bottom -->
 
