--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <ul class="header__nav">
                 <li class="current"><a href="index.html" title="">Home</a></li>
                 <li><a href="travel.html" title="">Travel</a></li>
-                <li><a href="painting.html" title="">Painting</a></li>
+                <li><a href="painting.html" title="">Sketch</a></li>
 
                 <!--<li><a href="me.html" title="">About Me</a></li>-->
 
