--- a/travel.html
+++ b/travel.html
@@ -57,7 +57,7 @@
            <ul class="header__nav">
                 <li><a href="index.html" title="">Home</a></li>
                 <li class="current"><a href="travel.html" title="">Travel</a></li>
-                <li><a href="painting.html" title="">Painting</a></li>
+                <li><a href="painting.html" title="">Sketch</a></li>
                <!--
                 <li><a href="me.html" title="">About Me</a></li>
                 <li><a href="single-standard.html">Blog</a></li>
