--- a/travel.html
+++ b/travel.html
@@ -152,6 +152,7 @@
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
     <script src="js/main.js"></script>
 
 </body>
