Add sketch sample 4 and 5

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <!--
                 <li><a href="single-standard.html">Blog</a></li>
                 <li><a href="cooking.html" title="">Cooking</a></li>
-                <li><a href="page-about.html" title="">Watson</a></li>-->
+                <li><a href="essay.html" title="">Watson</a></li>-->
             </ul> <!-- end header__nav -->
 
             <a href="#0" title="Close Menu" class="header__overlay-close close-mobile-menu">Close</a>
