--- a/painting.html
+++ b/painting.html
@@ -74,6 +74,19 @@
     <!-- s-content
     ================================================== -->
     <section class="s-content s-content--top-padding s-content--narrow">
+
+        <div class="row">
+                         <div class="portait-container">
+
+                             <div class="portait-box">
+                    <img src="images/thumbs/painting/painting4.jpg">
+                  </div>
+                              <div class="portait-box">
+                    <img src="images/thumbs/painting/painting3.jpg">
+                  </div>
+                         </div>
+        </div>
+
         <div class="row">
              <div class="portait-container">
                   <div class="portait-box">
