--- a/painting.html
+++ b/painting.html
@@ -85,9 +85,11 @@
                  <div class="portait-box">
                     <img src="images/thumbs/painting/painting1.jpg">
                   </div>
-
-                              <div class="portait-box">
+                 <div class="portait-box">
                     <img src="images/thumbs/painting/painting3.jpg">
+                  </div>
+                 <div class="portait-box">
+                    <img src="images/thumbs/painting/painting4.jpg">
                   </div>
                 </div>
         <!--
